# Shared

./: CMakeLists.txt  Doxyfile  README.md
System/: CMakeLists.txt
System/Sources/Buffer/: Buffer.cpp  Buffer.h
System/Sources/Common/: Endianness.h  System.h  Types.h
System/Sources/Compression/: ZLIBCompressor.cpp  ZLIBCompressor.h
System/Sources/FileSystem/: File.cpp  File.h  FileSystem.cpp
System/Sources/Options/: Options.cpp  Options.h
System/Sources/Serialization/: ISerializable.h
System/Sources/Stream/: Stream.cpp  Stream.h
System/Sources/String/: Utils.cpp  Utils.h
examples/Flate/: CMakeLists.txt
examples/template/: CMakeLists.txt
examples/template/Source/: main.cpp
examples/template/src/: main.cpp
examples/zlibcd/: CMakeLists.txt  CMakeLists.txt~  README.md
examples/zlibcd/src/: main.cpp
shared/: CMakeLists.txt
shared/src/Buffer/include/: Buffer.h
shared/src/Common/include/: Config.h  Defines.h  Shared.h  StringUtils.h  Types.h
shared/src/Common/source/: StringUtils.cpp  Timer.cpp
shared/src/Compression/include/: ICompressor.h
shared/src/FileSystem/include/: Directory.h  FileSystem.h
shared/src/FileSystem/source/: Directory.cpp  File.cpp  FileSystem.cpp
shared/src/Log/source/: Log.cpp
shared/src/Network/include/: FileDownloader.h
shared/src/Network/source/: FileDownloader.cpp
shared/src/Stream/include/: Stream.h
src/Buffer/include/: Buffer.h
src/Buffer/source/: Buffer.cpp
src/Common/include/: Defines.h  Endianness.h  Shared.h  StringUtils.h  Timer.h  Types.h
src/Common/source/: StringUtils.cpp
src/Compression/include/: ICompressor.h  ZLIBCompressor.h
src/Compression/source/: ZLIBCompressor.cpp
src/FileSystem/include/: Directory.h  File.h  FileSystem.h
src/FileSystem/source/: Directory.cpp  File.cpp  FileSystem.cpp
src/Log/include/: Log.h
src/Log/source/: Log.cpp
src/Stream/include/: Stream.h
src/Stream/source/: Stream.cpp
src/include/: Buffer.h  Defines.h  Directory.h  Endianness.h  File.h  FileSystem.h  Log.h  Shared.h  Stream.h  StringUtils.h  Timer.h  Types.h
src/source/: Buffer.cpp  Directory.cpp  File.cpp  FileSystem.cpp  Log.cpp  Stream.cpp  StringUtils.cpp  Timer.cpp
